fix(lang): ticket 11 review-round fixes